--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
-
+ipython==8.16.1
+matplotlib==3.7.3
+memory_profiler==0.61.0
+numpy==1.25.2
+pandas==2.2.1
+plotnine==0.12.4
+scikit_learn==1.4.0
+seaborn==0.13.2
